--- a/q1.ipynb
+++ b/q1.ipynb
@@ -855,14 +855,18 @@
    ],
    "source": [
     "selected_ranges = [(10, 35), (85, 110), (190, 215)]\n",
-    "fig, axes = plt.subplots(1, len(selected_ranges), figsize=(5 * len(selected_ranges), 5), sharey=True)\n",
+    "fig, axes = plt.subplots(\n",
+    "    1, len(selected_ranges), figsize=(5 * len(selected_ranges), 5), sharey=True\n",
+    ")\n",
     "if len(selected_ranges) == 1:\n",
     "    axes = [axes]\n",
     "for i, (ax, selected_range) in enumerate(zip(axes, selected_ranges)):\n",
     "    plot_selected_range(ax, selected_range)\n",
     "axes[0].set_ylabel(\"Performance Score\")\n",
     "axes[-1].legend(loc=\"lower right\")\n",
-    "fig.suptitle(f\"Performance in {match_id} (Points Without Break Point Wins or Double Faults)\")\n",
+    "fig.suptitle(\n",
+    "    f\"Performance in {match_id} (Points Without Break Point Wins or Double Faults)\"\n",
+    ")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
