--- a/q2.ipynb
+++ b/q2.ipynb
@@ -36,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_markov(*, target, target_lo, target_hi, end_decision_func, figsize, node_size, font_base):\n",
+    "def plot_markov(\n",
+    "    *, target, target_lo, target_hi, end_decision_func, figsize, node_size, font_base\n",
+    "):\n",
     "    # Count the transitions\n",
     "    transition_counts = {}\n",
     "    for i in range(1, len(df)):\n",
@@ -138,8 +140,16 @@
     "            end_states[k] = prob\n",
     "    end_states = sorted(end_states.items(), key=lambda x: x[1], reverse=True)\n",
     "    plt.figure(figsize=(5, 4))\n",
-    "    plt.pie([s[1] for s in end_states], explode=[0.1] + [0] * (len(end_states) - 1), labels=[set(s[0]) for s in end_states], shadow=True, autopct=\"%.2f%%\")\n",
-    "    plt.title(f\"Probabilities for {target}s won at the end of a {target_hi}\", fontsize=10)\n",
+    "    plt.pie(\n",
+    "        [s[1] for s in end_states],\n",
+    "        explode=[0.1] + [0] * (len(end_states) - 1),\n",
+    "        labels=[set(s[0]) for s in end_states],\n",
+    "        shadow=True,\n",
+    "        autopct=\"%.2f%%\",\n",
+    "    )\n",
+    "    plt.title(\n",
+    "        f\"Probabilities for {target}s won at the end of a {target_hi}\", fontsize=10\n",
+    "    )\n",
     "    plt.show()\n",
     "\n",
     "    # Plot the transition graph\n",
@@ -176,7 +186,10 @@
     "        ],\n",
     "        fontsize=font_base,\n",
     "    )\n",
-    "    plt.title(f\"The state transition graph for {target}s won in a {target_hi}\", fontsize=font_base + 2)\n",
+    "    plt.title(\n",
+    "        f\"The state transition graph for {target}s won in a {target_hi}\",\n",
+    "        fontsize=font_base + 2,\n",
+    "    )\n",
     "    plt.show()"
    ]
   },
@@ -308,6 +321,7 @@
     "    if diff <= -1:\n",
     "        return \"1-\"\n",
     "\n",
+    "\n",
     "def get_label(diff):\n",
     "    if diff is None:\n",
     "        return 0\n",
@@ -424,7 +438,10 @@
     "    edge_color=[cmap(G[u][v][\"weight\"]) for u, v in G.edges],\n",
     "    width=[G[u][v][\"weight\"] * 10 for u, v in G.edges],\n",
     ")\n",
-    "plt.title(\"The state transition graph for the difference in games won when a set ends\", fontsize=10)\n",
+    "plt.title(\n",
+    "    \"The state transition graph for the difference in games won when a set ends\",\n",
+    "    fontsize=10,\n",
+    ")\n",
     "plt.show()"
    ]
   }
