--- a/q1.ipynb
+++ b/q1.ipynb
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import rich\n",
     "from sklearn.preprocessing import minmax_scale"
    ]
   },
@@ -294,19 +295,32 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'victor_by_server'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.08759087046360858</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'victor_by_receiver'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1291685004290725</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'ace'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1819738376659515</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'winner'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.13893251745765206</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'break_pt_won'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1488164120563408</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'double_fault'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.16593199717316973</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'unf_err'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1475858647542049</span>\n",
+       "<span style=\"font-weight: bold\">}</span>\n",
+       "</pre>\n"
+      ],
       "text/plain": [
-       "{'victor_by_server': 0.08759087046360858,\n",
-       " 'victor_by_receiver': 0.1291685004290725,\n",
-       " 'ace': 0.1819738376659515,\n",
-       " 'winner': 0.13893251745765206,\n",
-       " 'break_pt_won': 0.1488164120563408,\n",
-       " 'double_fault': 0.16593199717316973,\n",
-       " 'unf_err': 0.1475858647542049}"
+       "\u001b[1m{\u001b[0m\n",
+       "    \u001b[32m'victor_by_server'\u001b[0m: \u001b[1;36m0.08759087046360858\u001b[0m,\n",
+       "    \u001b[32m'victor_by_receiver'\u001b[0m: \u001b[1;36m0.1291685004290725\u001b[0m,\n",
+       "    \u001b[32m'ace'\u001b[0m: \u001b[1;36m0.1819738376659515\u001b[0m,\n",
+       "    \u001b[32m'winner'\u001b[0m: \u001b[1;36m0.13893251745765206\u001b[0m,\n",
+       "    \u001b[32m'break_pt_won'\u001b[0m: \u001b[1;36m0.1488164120563408\u001b[0m,\n",
+       "    \u001b[32m'double_fault'\u001b[0m: \u001b[1;36m0.16593199717316973\u001b[0m,\n",
+       "    \u001b[32m'unf_err'\u001b[0m: \u001b[1;36m0.1475858647542049\u001b[0m\n",
+       "\u001b[1m}\u001b[0m\n"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -316,7 +330,9 @@
     "    norm_values * np.log(norm_values), axis=0\n",
     ")\n",
     "eval_df_spec_weights = g / np.sum(g)\n",
-    "{col: weight for col, weight in zip(eval_df_spec.columns, eval_df_spec_weights)}"
+    "rich.print(\n",
+    "    {col: weight for col, weight in zip(eval_df_spec.columns, eval_df_spec_weights)}\n",
+    ")"
    ]
   },
   {
