--- a/q1.ipynb
+++ b/q1.ipynb
@@ -11,7 +11,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import rich\n",
     "from sklearn.preprocessing import minmax_scale"
    ]
   },
@@ -296,31 +295,59 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'victor_by_server'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.08759087046360858</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'victor_by_receiver'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1291685004290725</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'ace'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1819738376659515</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'winner'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.13893251745765206</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'break_pt_won'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1488164120563408</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'double_fault'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.16593199717316973</span>,\n",
-       "    <span style=\"color: #008000; text-decoration-color: #008000\">'unf_err'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.1475858647542049</span>\n",
-       "<span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>spec</th>\n",
+       "      <th>ace</th>\n",
+       "      <th>double_fault</th>\n",
+       "      <th>break_pt_won</th>\n",
+       "      <th>unf_err</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>victor_by_receiver</th>\n",
+       "      <th>victor_by_server</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>weight</th>\n",
+       "      <td>0.181974</td>\n",
+       "      <td>0.165932</td>\n",
+       "      <td>0.148816</td>\n",
+       "      <td>0.147586</td>\n",
+       "      <td>0.138933</td>\n",
+       "      <td>0.129169</td>\n",
+       "      <td>0.087591</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "\u001b[1m{\u001b[0m\n",
-       "    \u001b[32m'victor_by_server'\u001b[0m: \u001b[1;36m0.08759087046360858\u001b[0m,\n",
-       "    \u001b[32m'victor_by_receiver'\u001b[0m: \u001b[1;36m0.1291685004290725\u001b[0m,\n",
-       "    \u001b[32m'ace'\u001b[0m: \u001b[1;36m0.1819738376659515\u001b[0m,\n",
-       "    \u001b[32m'winner'\u001b[0m: \u001b[1;36m0.13893251745765206\u001b[0m,\n",
-       "    \u001b[32m'break_pt_won'\u001b[0m: \u001b[1;36m0.1488164120563408\u001b[0m,\n",
-       "    \u001b[32m'double_fault'\u001b[0m: \u001b[1;36m0.16593199717316973\u001b[0m,\n",
-       "    \u001b[32m'unf_err'\u001b[0m: \u001b[1;36m0.1475858647542049\u001b[0m\n",
-       "\u001b[1m}\u001b[0m\n"
+       "spec         ace  double_fault  break_pt_won   unf_err    winner  \\\n",
+       "weight  0.181974      0.165932      0.148816  0.147586  0.138933   \n",
+       "\n",
+       "spec    victor_by_receiver  victor_by_server  \n",
+       "weight            0.129169          0.087591  "
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -330,9 +357,9 @@
     "    norm_values * np.log(norm_values), axis=0\n",
     ")\n",
     "eval_df_spec_weights = g / np.sum(g)\n",
-    "rich.print(\n",
-    "    {col: weight for col, weight in zip(eval_df_spec.columns, eval_df_spec_weights)}\n",
-    ")"
+    "pd.DataFrame({\"spec\": eval_df_spec.columns, \"weight\": eval_df_spec_weights}).set_index(\n",
+    "    \"spec\"\n",
+    ").sort_values(by=\"weight\", ascending=False).T"
    ]
   },
   {
