--- a/q3-2.ipynb
+++ b/q3-2.ipynb
@@ -1354,7 +1354,9 @@
    ],
    "source": [
     "clf = pipeline[\"clf\"]\n",
-    "pd.DataFrame({\"feature\": X.columns, \"importance\": clf.feature_importances_}).set_index(\"feature\").sort_values(\"importance\", ascending=False).T"
+    "pd.DataFrame({\"feature\": X.columns, \"importance\": clf.feature_importances_}).set_index(\n",
+    "    \"feature\"\n",
+    ").sort_values(\"importance\", ascending=False).T"
    ]
   },
   {
